--- a/Formulário de cadastro.html
+++ b/Formulário de cadastro.html
@@ -6,17 +6,20 @@
     <title>Formulário</title> <br/>
 </head>
 <body>
+    <form>
+
     <h1>Formulário de cadastro</h1>
     <label for="user">Nome:</label>
-    <Input type="user" id="user"> <br/>
+    <Input type="text" id="user"> <br/>
     <label for="email">E-mail:</label>
     <input type="email" id="email"/> <br/>
     <label for="password">Senha:</label>
     <input type="password" id="password"/> <br/>
 
-    <button>
+    <button type="submit">
         Cadastrar
     </button>
     
+    </form>
 </body>
 </html>
